--- a/ansible/roles/deploy_monitoring/templates/prometheus.yml.j2
+++ b/ansible/roles/deploy_monitoring/templates/prometheus.yml.j2
@@ -11,3 +11,8 @@ scrape_configs:
   - job_name: "flaskapp"
     static_configs:
       - targets: ['{{ groups["appServer"][0] }}:8000']
+  - job_name: "nginx"
+    metrics_path: /prometheus
+    scrape_interval: 30s
+    static_configs: 
+    - targets: ["{{ domain_name }}:9113"]
