--- a/ansible/roles/deploy_lb/templates/load-balancer.conf.j2
+++ b/ansible/roles/deploy_lb/templates/load-balancer.conf.j2
@@ -1,35 +1,42 @@
 http {
-    upstream app-hosts {
-        server {{ groups['appServer'][0] }}:8000;
-    }
+   upstream app-hosts {
+      server {{ groups['appServer'][0] }}:8000;
+   }
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+   access_log /var/log/nginx/access.log;
+   error_log /var/log/nginx/error.log;
 
-    # This server accepts all traffic to port 80 and passes it to the upstream. 
-    # Notice that the upstream name and the proxy_pass need to match.
+   # This server accepts all traffic to port 80 and passes it to the upstream. 
+   # Notice that the upstream name and the proxy_pass need to match.
 
-    server {
-       listen 80;
-       server_name  {{ domain_name }} www.{{ domain_name }};
-       return 301 https://$server_name$request_uri;
-    }
+   server {
+      listen 80;
+      server_name  {{ domain_name }} www.{{ domain_name }};
+      return 301 https://$server_name$request_uri;
+   }
 
-    server {
-       listen 443 ssl;
-       server_name  {{ domain_name }} www.{{ domain_name }};
-       add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
-        
-       ssl_certificate /etc/letsencrypt/live/{{ domain_name }}/cert.pem;
-       ssl_certificate_key /etc/letsencrypt/live/{{ domain_name }}/privkey.pem;
-       ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   server {
+      listen 443 ssl;
+      server_name  {{ domain_name }} www.{{ domain_name }};
+      add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+      add_header X-Frame-Options sameorigin always;
 
-       location / {
-          proxy_pass http://app-hosts;
-       }
-       location /metrics {
-        stub_status on;
+      ssl_certificate /etc/letsencrypt/live/{{ domain_name }}/cert.pem;
+      ssl_certificate_key /etc/letsencrypt/live/{{ domain_name }}/privkey.pem;
+      ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+      proxy_cookie_path / "/; Secure; HttpOnly";
+      server_tokens off;
+
+      location / {
+         proxy_pass http://app-hosts;
+         proxy_cookie_path / "/; secure; HttpOnly; SameSite=strict";
       }
+
+      location /metrics {
+         stub_status on;
+         proxy_cookie_path / "/; secure; HttpOnly; SameSite=strict";
+      }
+
       location /grafana/ {
          proxy_pass http://{{ groups['monitoring'][0] }}:3000/;
          proxy_set_header Host $host;
@@ -37,6 +44,7 @@ http {
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Server $host;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         proxy_cookie_path / "/; secure; HttpOnly; SameSite=strict";
       }
     }
 }
